Replace last version of contentInfoTag